# to_do_list_FastAPI

./: .gitignore  README.md
code/: pyproject.toml
code/tests/: test_app.py
