[project]
name = "fastapi-todolist"
version = "0.1.0"
description = ""
authors = [
    { name = "GabrielPongelupe", email = "gabrielpongelupee@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]>=0.115.2,<0.116.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "fastapi_todolist" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79  # <- Corrigido (estava "line-lenght")
extend-exclude = ["migrations"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_todolist/app.py'

test = 'pytest -s -x --cov=fastapi_todolist -vv'
pre_test = 'task lint'
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'